# bootstracts

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
bootstracts/: __init__.py  along_tract.py  core.py  graph_analysis.py  inference.py  storage.py  viz.py  viz_extended.py
src/bootstracts/: backends.py  community.py  voxel_bootstrap.py
src/bootstracts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_bootstracts.py
